samples/_failures_safe/1761349204_1987f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23924292.c: In function ‘main’:
./samples/SAFE/__tmp_23924292.c:157:9: error: expected expression at end of input
  157 |         {EVENT_DATA_READY, "again", 5},
      |         ^
./samples/SAFE/__tmp_23924292.c:157:9: error: expected declaration or statement at end of input
